src/test/resources/valid_tests/SimpleNetworkRelu.cnna
architecture SimpleNetworkRelu{
    def input in
    def output out
    
    in ->
    fullyConnected(units=64, no_bias=true)
    activation.tanh()
    output {
        fullyConnected(no_bias=true)
        activation.relu()
    } -> out
}